# rdgai

./: .coveragerc  .gitignore  README.rst  produce-test-results.sh  pyproject.toml
.github/workflows/: docs.yml  testing.yml
docs/: api.rst  classification.rst  cli.rst  conf.py  index.rst  preparation.rst  quickstart.rst  validation.rst  why.rst
rdgai/: apparatus.py  classification.py  evaluation.py  export.py  languages.py  llms.py  main.py  mapper.py  parsers.py  prompts.py  relations.py  tei.py  validate.py  validation.py
rdgai/data/: generate_yaml.py  language-subtag-registry.yaml
rdgai/templates/: report.html  server.html
results/: arb-10-Llama-3.3-70B-Instruct.xml  arb-10-claude-3-5-haiku-20241022.xml  arb-10-claude-3-5-sonnet-20241022.xml  arb-10-gpt-4o-2024-11-20.xml  arb-10-gpt-4o-mini-2024-07-18.xml  arb-10-gpt-4o.xml  arb-20-Llama-3.3-70B-Instruct.xml  arb-20-claude-3-5-haiku-20241022.xml  arb-20-claude-3-5-sonnet-20241022.xml  arb-20-gpt-4o-2024-11-20.xml  arb-20-gpt-4o-mini-2024-07-18.xml  arb-30-Llama-3.3-70B-Instruct.xml  arb-30-claude-3-5-haiku-20241022.xml  arb-30-claude-3-5-sonnet-20241022.xml  arb-30-gpt-4o-2024-11-20.xml  arb-30-gpt-4o-mini-2024-07-18.xml  arb-30-gpt-4o-mini.xml  arb-results.csv  plot-results.py
tests/: conftest.py  test_apparatus.py  test_classification.py  test_evaluation.py  test_export.py  test_languages.py  test_main.py  test_mapper.py  test_parsers.py  test_prompts.py  test_relations.py  test_tei.py  test_validation.py  util.py
tests/test-data/: app_names.xml  arb.xml  ground_truth.csv  ground_truth.xlsx  ground_truth.xml  ground_truth_missing_app.xml  ground_truth_missing_manual.xml  ground_truth_missing_relations.xml  inverses.xml  messy.xml  minimal.xml  minimal_output.xml  no_interpgrp.xml  (+1 more)
(+4 files in other folders)
